<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.ExerciseActivity"
    android:orientation="vertical"
    android:background="#fff">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_exercise_activity"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        app:titleTextColor="#000"
        android:theme="@style/ToolbarTheme"
        android:background="#fff"/>

    <LinearLayout
        android:id="@+id/linear_layout_rest_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar_exercise_activity"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_ready_for"
            android:textColor="@color/colorAccent"
            android:textSize="22sp"
            android:textStyle="bold"/>

        <FrameLayout
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/item_circle_exercise_activity">

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:background="@drawable/circular_progress_bar_gray"
                android:indeterminate="false"
                android:max="10"
                android:progress="100"
                android:progressDrawable="@drawable/circular_progress_bar"
                android:rotation="-90"/>
            <LinearLayout
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:background="@drawable/button_field"
                android:gravity="center">

                <TextView
                    android:id="@+id/tvTimer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#fff"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    tools:text="10"/>
            </LinearLayout>
        </FrameLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="UPCOMING EXERCISE:"
            android:layout_marginTop="15dp"
            android:textColor="#333"/>

        <TextView
            android:id="@+id/tv_exercise_name_rest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Jumping Jacks"
            android:layout_marginTop="15dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#333"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_exercise_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar_exercise_activity"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:id="@+id/ivExercise"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:contentDescription="@string/main_image"
            android:scaleType="fitCenter"
            android:src="@drawable/jumping_jacks"/>

        <TextView
            android:id="@+id/tvExerciseName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exercise_name"
            android:textColor="@color/colorAccent"
            android:textSize="22sp"
            android:textStyle="bold"/>

        <FrameLayout
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/item_circle_exercise_activity">

            <ProgressBar
                android:id="@+id/progressBarExercise"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:background="@drawable/circular_progress_bar_gray"
                android:indeterminate="false"
                android:max="30"
                android:progress="100"
                android:progressDrawable="@drawable/circular_progress_bar"
                android:rotation="-90"/>
            <LinearLayout
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:background="@drawable/button_field"
                android:gravity="center">

                <TextView
                    android:id="@+id/tvTimerExercise"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#fff"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    tools:text="10"/>
            </LinearLayout>


        </FrameLayout>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rvExerciseStatus"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"/>
</RelativeLayout>